# Speech_to_text_project

./: .gitignore  LICENSE  README.md  RESULTATS_TP.txt  TP STT.md  pyproject.toml  requirements.txt
01_architectures_from_scratch/: RESULTS.md
01_architectures_from_scratch/partie1/: part1_mlp_mfcc_ctc.py
01_architectures_from_scratch/partie2/: part2_cnn_spectrogram.py
01_architectures_from_scratch/partie3/: part3_rnn_lstm.py
01_architectures_from_scratch/partie4/: part4_transformer.py
01_architectures_from_scratch/partie5/: part5_best_params.json
02_finetuning_pretrained/: RESULTS.md  finetune_wav2vec2.py  finetune_whisper.py
partie1/: part1_mlp_mfcc_ctc.py
partie2/: part2_cnn_spectrogram.py
partie3/: part3_rnn_lstm.py
partie5/: part5_hyperparameter_tuning.py  training_log.txt
